# alembic-fastapi-migrations

./: README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 2aa79f6147eb_create_tables_posts_users.py  2e7b4034f379_create_users_and_posts_tables.py  31843afc85a1_add_votes.py  7027f30d14e9_add_relationship_to_users.py  99208cc06c82_add_weather_source_table.py  ec17915a6940_change_location_geometry_type_to_polygon.py  f5ff627a33d0_add_foreign_key_to_posts.py
db_migration/: main.py
db_migration/db/: sql.py
db_migration/models/: main.py  posts.py  users.py
db_migration/schemas/: posts.py  users.py
tests/: test_db_migration.py
