[tool.poetry]
name = "db_migration"
version = "0.1.0"
description = ""
authors = ["Austinstevesk <austinstevesk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
SQLAlchemy = "^2.0.16"
alembic = "^1.11.1"
pydantic = "^1.10.9"
psycopg2 = "^2.9.6"
GeoAlchemy2 = "^0.13.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
